--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "firebase": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
+    "react-hook-form": "^7.11.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
